--- a/index.html
+++ b/index.html
@@ -79,10 +79,17 @@
 	
 <div class="flex-container">
     <img style = "max-width: 80%;" src="images/app/demo.gif" />
-    <imgstyle = "height: 500px;" src="images/Product_Image_1.png" />
-    <img style = "height: 500px;" src="images/Product_Image_1.png" />
-    <img style = "height: 500px;" src="images/Product_Image_1.png" />
-  </div>  
+    <imgstyle = "max-width: 80%;" src="images/Product_Image_1.png" />
+</div>  
+	
+	<div class="flex-container">
+  	  <div class="flex-item">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div> 
+       </div>  
+	
 <!-- </div> -->
 	
 	<div>
