--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
   </ul>
+ <img style = "float: right; max-width: 35%;" src="images/app/demo.gif" />
 </div>
 
 
