--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
     <li>Works with Chrome, Firefox, Opera, & more!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
+
+  </ul>
+ <img style = "float: right;" src="images/app/demo.gif" />
+</div>
+	<br><br>
+<div>
+  <ul>
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
   </ul>
- <img style = "float: right; max-width: 35%;" src="images/app/demo.gif" />
+ <img style = "float: left;" src="images/app/LinkedInViews.png" />
 </div>
 
 
