--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
     <li>Works with Chrome, Firefox, Opera, & more!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
-
   </ul>
- <img style = "float: right;" src="images/app/demo.gif" />
+ <img style = "float: right; max-width: 35%;" src="images/app/demo.gif" />
 </div>
 	<br><br>
 <div>
@@ -66,7 +65,7 @@
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
   </ul>
- <img style = "float: left;" src="images/app/LinkedInViews.png" />
+ <img style = "float: left; max-width: 35%;" src="images/app/LinkedInViews.png" />
 </div>
 
 
