--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
   </ul>
- <img style = "float: right; max-width: 35%;" src="images/app/demo.gif" />
+ <img style = "max-width: 35%;" src="images/app/demo.gif" />
 </div>
 	
 </div> 	
 	<br><br>
 <div class="flex-container">
-<div>
+<div> 
+<img style = "max-width: 35%;" src="images/app/LinkedInViews.png" />
   <ul>
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
   </ul>
- <img style = "float: left; max-width: 35%;" src="images/app/LinkedInViews.png" />
+
 </div>
 
 </div>
