--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
     <li>View and connect with people based on job title &/or location!</li>
     <li>Works with Chrome, Firefox, Opera, & more!</li>
-    <li>Watch the browser work away or try out Background mode!*</li>
+    <li>Watch the browser work away or try out Background mode!</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
   </ul>
- <img style = "max-width: 35%;" src="images/app/demo.gif" />
+ <img style = "max-height: 10em%;" src="images/app/demo.gif" />
 </div>
 	
 </div> 	
@@ -81,17 +81,7 @@
 	<br>
 	<br>
 	
-	<small>Background mode currently only works with Firefox</small>
 
-	
-	
-	
-	
-	
-	
-	
-	
-	
  
 	
 	<div class="flex-container">
