--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <li>Watch the browser work away or try out Background mode!</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
   </ul>
- <img style = "max-height: 10em;" src="images/app/demo.gif" />
+ <img style = "max-height: 25em;" src="images/app/demo.gif" />
 </div>
 	
 </div> 	
 	<br><br>
 <div class="flex-container">
 <div> 
-<img style = "max-width: 35%;" src="images/app/LinkedInViews.png" />
+<img style = "max-height: 25em;" src="images/app/LinkedInViews.png" />
   <ul>
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
