--- a/index.html
+++ b/index.html
@@ -57,18 +57,20 @@
     <li>Watch the browser work away or try out Background mode!</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
   </ul>
- <img style = "max-height: 40%;" src="images/app/demo.gif" />
+ <img style = "max-width: 40%;" src="images/app/demo.gif" />
 </div>
 	
 </div> 	
 	<br><br>
 <div class="flex-container">
 <div> 
-<img style = "max-height: 40%;" src="images/app/LinkedInViews.png" />
+<img style = "max-width: 40%;" src="images/app/LinkedInViews.png" />
   <ul>
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
+    <li>More features released all the time!</li>
+	  
   </ul>
 
 </div>
