--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <div>
   <ul>
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
+    <li>Automatic resume upload & parsing!</li>
     <li>View and connect with people based on job title &/or location!</li>
     <li>Works with Chrome, Firefox, Opera, & more!</li>
     <li>Watch the browser work away or try out Background mode!</li>
