--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<br><br>
 <div class="flex-container">
 <div> 
-<img style = "max-width: 55%;" src="images/app/LinkedInViews.png" />
+<img style = "max-width: 55%;" src="images/app/Linkedin_profile_views.jpeg" />
   <ul>
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
