--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <li>Watch the browser work away or try out Background mode!</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
   </ul>
- <img style = "max-width: 55%;" src="images/app/demo.gif" />
+ <img class = "productImg" src="images/app/demo.gif" />
 </div>
 	
 </div> 	
