--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <li>Works with Chrome, Firefox, Opera, & more!</li>
     <li>Watch the browser work away or try out Background mode!</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
+    <li>Send custom messages to new contacts</li>
+    <li>Reporting & statistic on number of applications compeleted!</li>
+    <li>Easily find & connect with your school alumni on LinkedIn!</li>
   </ul>
  <img class = "productImg" src="images/app/demo.gif" />
 </div>
