--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">
-<img class = "productImg"src = "images/Click.svg" />
+	  
+<img class = "backgroundImage" src = "images/Click.svg" />
+
 <div class = "card">
 
 	<p align="justify">
