--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">
 
-<div class = "backgroundImage" />
+<div class = "backgroundImage"></div>
 	  
 <div class = "card">
 
