--- a/FAQ.html
+++ b/FAQ.html
@@ -66,25 +66,32 @@
 </div class="topnav">	
 	
 
-<div class = "card">
-<H1>Installation Instructions</H1>
-
-To install, click install.
-	
-Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.
-
-</div class = "card">
-	  
-	  
 	  
 	  
 <div class = "card"> 
 
 
-<h1>FAQ</h1>
+<h1>Frequently Asked Questions</h1>
 <p align="justify"> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.</p align="justify">
-	
 
+<button type="button" class="collapsible">How do I install the Easy Apply Button</button>
+<div class="content">
+  <p align="justify">
+Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.</p align="justify">
+</div>
+
+<button type="button" class="collapsible">What languages does the Easy Apply Bot Support?</button>
+<div class="content">
+  <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting to English on the respective websites. Failing to do so may cause unexpected errors to occur.</p align="justify">
+</div>
+
+<button type="button" class="collapsible">What is the return policy?</button>
+<div class="content">
+  <p align="justify">
+The Easy Apply Bot has a 24 hour "no questions asked" return period.</p align="justify">
+</div>
+
+	
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p align="justify">Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p align="justify">
