--- a/FAQ.html
+++ b/FAQ.html
@@ -74,7 +74,7 @@
 <h1>Frequently Asked Questions</h1>
 <p align="justify"> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.</p align="justify">
 
-<button type="button" class="collapsible">How do I install the Easy Apply Button</button>
+<button type="button" class="collapsible">How do I install the Easy Apply Bot?</button>
 <div class="content">
   <p align="justify">
 Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.</p align="justify">
@@ -82,7 +82,7 @@ Important: make sure that you have your Profile Viewing Setting changed from 'An
 
 <button type="button" class="collapsible">What languages does the Easy Apply Bot Support?</button>
 <div class="content">
-  <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting to English on the respective websites. Failing to do so may cause unexpected errors to occur.</p align="justify">
+  <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting must be set to "English" on the respective websites. Failing to do so may cause unexpected errors to occur. If demand is high enough, we may develope other languages as well</p align="justify">
 </div>
 
 <button type="button" class="collapsible">What is the return policy?</button>
@@ -90,7 +90,12 @@ Important: make sure that you have your Profile Viewing Setting changed from 'An
   <p align="justify">
 The Easy Apply Bot has a 24 hour "no questions asked" return period.</p align="justify">
 </div>
-
+	
+<button type="button" class="collapsible">I'm getting hundred of emails from LinkedIn, Glassdoor, etc. What should I do?</button>
+<div class="content">
+  <p align="justify">
+We encourage that you turn off email notification, otherwise you may get an email for each and every job that you apply to. You will still recieve emails sent directly from employeers.</p align="justify">
+</div>
 	
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
