--- a/FAQ.html
+++ b/FAQ.html
@@ -96,7 +96,12 @@ The Easy Apply Bot has a 24 hour "no questions asked" return period.</p align="j
   <p align="justify">
 We encourage that you turn off email notification, otherwise you may get an email for each and every job that you apply to. You will still recieve emails sent directly from employeers.</p align="justify">
 </div>
-	
+
+<button type="button" class="collapsible">Why isn't the premium version of the Easy Apply Bot free?</button>
+<div class="content">
+  <p align="justify">The Easy Apply Bot required hundreds of hours of development and testing. In addition, we are continually seeking to make a better product with more and more valuable features.</p align="justify">
+</div>
+
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p align="justify">Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p align="justify">
