--- a/FAQ.html
+++ b/FAQ.html
@@ -60,7 +60,7 @@
 
 
 <div class="topnav">
-  <a href="#">Download Easy Apply Bot Now!</a>
+  <a href="../index.html">Download Easy Apply Bot Now!</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">	
