--- a/FAQ.html
+++ b/FAQ.html
@@ -136,9 +136,9 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 <br><br>
-For general inquiries, send us an email<br>
-
-telosbrothers@gmail.com
+For general inquiries, send us an email!<br>
+<a href="mailto:telosbrothers@gmail.com">telosbrothers@gmail.com
+</a>
 
 
 
