--- a/FAQ.html
+++ b/FAQ.html
@@ -77,12 +77,10 @@
 <button type="button" class="collapsible">How do I install the Easy Apply Bot?</button>
 <div class="content">
 	<p>Installing the Easy Apply Bot is simple!</p>
-	<ol>
-		<li>Step one</li>
-		<li>Step two</li>
-		<li>Step three</li>
-		<li>Step four</li>
-	</ol>
+<p align = "left">
+	1. Step one
+	2. Step two
+	3. Step three
   <p align="justify">
 Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.</p align="justify">
 </div>
