--- a/FAQ.html
+++ b/FAQ.html
@@ -79,12 +79,24 @@
 	<p>Installing the Easy Apply Bot is simple!</p>
 <p align = "left">
 	1. Step one
-	<br>
+	<br><br>
 	2. Step two
-	<br>
+	<br><br>
 	3. Step three
-  <p align="justify">
-Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.</p align="justify">
+	<br><br>
+		<p>It is highly recommended that you follow these guidelines for the best experience!</p>
+<p align = "left">
+	1. Make English the default language on your browswer, if it is not already.
+	<br><br>
+	2. Make English the default langauge on LinkedIn, Glassdoor, Indeed, etc.
+	<br><br>
+	3. Turning off "email me when I apply to jobs" LinkedIn, Glassdoor, Indeed, etc. You will still get emails from potential employeers.
+	<br><br>
+	4. Apply to job on only one website at a time.
+	<br><br>
+	5. Update LinkedIn profile wiewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return.
+	</p>
+
 </div>
 
 <button type="button" class="collapsible">What languages does the Easy Apply Bot Support?</button>
