--- a/FAQ.html
+++ b/FAQ.html
@@ -54,7 +54,7 @@
   <div class="flex-container">
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
-    <h3 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h3>
+    <h2 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h2>
   <div>
 </div class = "header">
 
@@ -76,7 +76,7 @@
 
 <button type="button" class="collapsible">How do I install the Easy Apply Bot?</button>
 <div class="content">
-	<p>Installing the Easy Apply Bot is simple!</p>
+	<H3>Installing the Easy Apply Bot is simple!</H3>
 <p align = "left">
 	1. Step one
 	<br><br>
@@ -84,7 +84,7 @@
 	<br><br>
 	3. Step three
 	<br><br>
-		<p>It is highly recommended that you follow these guidelines for the best experience!</p>
+		<H3>It is highly recommended that you follow these guidelines for the best experience!</H3>
 <p align = "left">
 	1. Make English the default language on your browswer, if it is not already.
 	<br><br>
