--- a/FAQ.html
+++ b/FAQ.html
@@ -90,7 +90,7 @@
 	<br><br>
 	2. Make English the default langauge on LinkedIn, Glassdoor, Indeed, etc.
 	<br><br>
-	3. Turning off "email me when I apply to jobs" LinkedIn, Glassdoor, Indeed, etc. You will still get emails from potential employeers.
+	3. Turn off "email me when I apply to jobs" LinkedIn, Glassdoor, Indeed, etc. You will still get emails from potential employeers.
 	<br><br>
 	4. Apply to job on only one website at a time.
 	<br><br>
