--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
     <li>Increase your LinkedIn profile views!</li>
     <li>Apply to jobs based on Location, Salary, & Title!</li>
     <li>Works with PC, Mac, & Linux operating systems</li>
-    <li>More features released all the time!</li>
-	  
+    <li>Automatically endorse your connection's skills on LinkedIn!</li>
+    <li>Get customized updates on potential salaries!</li>
+    <li>Get your resume notices by recruiters!</li>
+    <li>Enjoy new features which we release all the time!</li>	
+
   </ul>
 
 </div>
