--- a/FAQ.html
+++ b/FAQ.html
@@ -78,11 +78,11 @@
 <div class="content">
 	<H3>Installing the Easy Apply Bot is simple!</H3>
 <p align = "left">
-	1. Step one
+	1. Click the download button.
 	<br><br>
-	2. Step two
+	2. Once the download is completed, open the Easy Apply Bot file. This may take a minute or two.
 	<br><br>
-	3. Step three
+	3. Your good to go!
 	<br><br>
 		<H3>It is highly recommended that you follow these guidelines for the best experience!</H3>
 <p align = "left">
