--- a/FAQ.html
+++ b/FAQ.html
@@ -103,7 +103,20 @@
 <div class="content">
   <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting must be set to "English" on the respective websites. Failing to do so may cause unexpected errors to occur. If demand is high enough, we may develope other languages as well</p align="justify">
 </div>
-
+	
+<button type="button" class="collapsible">I think the Easy Apply Bot is frozen or broken, what should I do?</button>
+<div class="content">
+  <p align="justify"> We had make the Easy Apply Bot get around those pesky <a href = "https://en.wikipedia.org/wiki/CAPTCHA">CAPTCHAs</a>. One of the way we do that is by purposely taking a break, and limiting the total number of position you can apply to at once. We do this because it would be extememly easy to detect if suddenly one (or in our case, thousands or people) starts applying to thousands of jobs a second.
+	  <br>
+	  Before, you report that the Easy Bot is broken, please check to ensure that the Easy Bot isn't just taking a break, or that you've reached the maximum applications for the day. You should see a message if this is true.
+	 <br> 
+	 Please also enusre that the Easy Bot hasn't timed out (you will get a message telling you so), and that your computer is connected to the internet.
+	  <br>
+	  Lastly, please try closing (or force closing) the Easy Apply Bot first and try restarting it before sending an error report.
+	  
+	</p align="justify">
+</div>
+	
 <button type="button" class="collapsible">What is the return policy?</button>
 <div class="content">
   <p align="justify">
