--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="flex-container">
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
-    <h3 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h3>
+    <h2 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h2>
   <div>
 </div class = "header">
 
@@ -29,7 +29,7 @@
 <div class = "backgroundImage"></div>
 	  
 <div class = "card">
-
+	<H3>Use our unique job application system to advance your career with the click of a button.</H3><div style = "height: 100px;" class = "backgroundImage"></div>
 	<p align="justify">
 	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
 		<br>
@@ -137,32 +137,7 @@
 
 	
 </div class = "card">
-<!--
-<div class = "card">
-<div class="flex-container">
-	<div class="flex-item">
 
-		<p align="justify">
-		Use our unique job application system to apply to easily find your next job and advance your career with the click of a button.
-		</p>
-		<ul>
-		<li>
-		  Automatic application tracking system
-		</li>
-		<li>
-		  Easily apply to hundreds of positions
-		</li>
-		<li>
-		  Search by job title, location, and even salary
-		</li>
-		<li>
-		  LinkedIn, Glassdoor, Indeed, Monster & more!
-		</li>
-		</ul>
-
-	</div class="flex-container">
-</div class = "card">
--->
 	    
 <div class = "card">
 	<p align="center">
