--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">
 
-<div class = "backgroundImage"></div>
+<img class = "backgroundImage"></img>
 	  
 <div class = "card">
 	<H3>Use our unique job application system to advance your career with the click of a button.</H3><div style = "height: 100px;" class = "backgroundImage"></div>
