--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <li>Automatically endorse your connection's skills on LinkedIn!</li>
     <li>Get customized updates on potential salaries!</li>
     <li>Get your resume notices by recruiters!</li>
-    <li>Enjoy new features which we release all the time!</li>	
+    <li>Enjoy the latest features!</li>	
 
   </ul>
 
