--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <!-- </div> -->
 	
 	<div>
-	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
+	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; margin: 0 15px 15px 0;"/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
 		According to Forbes, even so-called "casual" job searches could soak up to 7 or 8 hours per week<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
 	</div>
 	
