--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
 	
 	<H3>Use our unique job application system to advance your career with the click of a button.</H3>
 	<div class = "flex-container">	
+		<div style = "width: 75%">
 	<p align="justify">
-	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><img src = "images/Trust_Icon.svg"  height="100" />
+	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p></div><img src = "images/Trust_Icon.svg"  height="100" />
+	</div class = "flex-container>
 		<br>
 		<br>
 	<p align="justify">The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
 	</p>
 		
-	</div>
+	
 	
 	<div class="flex-container">
   	  <div class="flex-item">
