--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 	    </a>
   	  </div> 
        </div>  
-	
+<div class="flex-container">
+ <img src="images/app/HowitWorks.svg" />
+</div>
 <!-- </div> -->
 	
 	<div>
