--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   	  </div> 
        </div>  
 <div class="flex-container">
- <img src="images/app/HowitWorks.svg" />
+ <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
 </div>
 <!-- </div> -->
 	
