--- a/FAQ.html
+++ b/FAQ.html
@@ -120,20 +120,20 @@
 <button type="button" class="collapsible">What is the return policy?</button>
 <div class="content">
   <p align="justify">
-The Easy Apply Bot has a 24 hour "no questions asked" return period.</p align="justify">
+The Easy Apply Bot has a simple 24 hour "no questions asked" return period.</p align="justify">
 </div>
 	
+<button type="button" class="collapsible">Why isn't the Easy Apply Bot free?</button>
+<div class="content">
+  <p align="justify">The Easy Apply Bot required hundreds of hours to development and testing; additionly the Easy Apply Bot requires substantial amount of time and effort to maintain, improve, and increase the available features.</p align="justify">
+</div>
+
 <button type="button" class="collapsible">I'm getting hundred of emails from LinkedIn, Glassdoor, etc. What should I do?</button>
 <div class="content">
   <p align="justify">
-We encourage that you turn off email notification, otherwise you may get an email for each and every job that you apply to. You will still recieve emails sent directly from employeers.</p align="justify">
+We encourage that you turn off "email me whenever I apply to a position" notification from these websites when using the Easy Apply Bot, otherwise you may get an email for each and every job that you apply to...and these can add up very quickly. You will still recieve emails sent directly from employeers, though.</p align="justify">
 </div>
-
-<button type="button" class="collapsible">Why isn't the premium version of the Easy Apply Bot free?</button>
-<div class="content">
-  <p align="justify">The Easy Apply Bot required hundreds of hours of development and testing. In addition, we are continually seeking to make a better product with more and more valuable features.</p align="justify">
-</div>
-
+	
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p align="justify">Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p align="justify">
