--- a/FAQ.html
+++ b/FAQ.html
@@ -107,11 +107,13 @@
 <button type="button" class="collapsible">I think the Easy Apply Bot is frozen or broken, what should I do?</button>
 <div class="content">
   <p align="justify"> We had make the Easy Apply Bot get around those pesky <a href = "https://en.wikipedia.org/wiki/CAPTCHA">CAPTCHAs</a>. One of the way we do that is by purposely taking a break, and limiting the total number of position you can apply to at once. We do this because it would be extememly easy to detect if suddenly one (or in our case, thousands or people) starts applying to thousands of jobs a second.
-	  <br>
+	  <br>  <br>
 	  Before, you report that the Easy Bot is broken, please check to ensure that the Easy Bot isn't just taking a break, or that you've reached the maximum applications for the day. You should see a message if this is true.
-	 <br> 
+	 <br>   <br>
 	 Please also enusre that the Easy Bot hasn't timed out (you will get a message telling you so), and that your computer is connected to the internet.
-	  <br>
+	  <br>  <br>
+	  If you're still having issues, you may be using an out dated verion of the Easy Apply Bot. We are currently working on implementing a version control system that will automatically update the Easy Apply Bot to the newest version. In the meantime, please reach out to our customer service team, and we'll get send you a link to the latest version free of charge.
+	  <br>  <br>
 	  Lastly, please try closing (or force closing) the Easy Apply Bot first and try restarting it before sending an error report.
 	  
 	</p align="justify">
@@ -122,18 +124,23 @@
   <p align="justify">
 The Easy Apply Bot has a simple 24 hour "no questions asked" return period.</p align="justify">
 </div>
-	
-<button type="button" class="collapsible">Why isn't the Easy Apply Bot free?</button>
-<div class="content">
-  <p align="justify">The Easy Apply Bot required hundreds of hours to development and testing; additionly the Easy Apply Bot requires substantial amount of time and effort to maintain, improve, and increase the available features.</p align="justify">
-</div>
 
 <button type="button" class="collapsible">I'm getting hundred of emails from LinkedIn, Glassdoor, etc. What should I do?</button>
 <div class="content">
   <p align="justify">
 We encourage that you turn off "email me whenever I apply to a position" notification from these websites when using the Easy Apply Bot, otherwise you may get an email for each and every job that you apply to...and these can add up very quickly. You will still recieve emails sent directly from employeers, though.</p align="justify">
 </div>
+
+<button type="button" class="collapsible">Why is there so many differnt versions of the Easy Apply Bot? Why don't you make one version that does everything?</button>
+<div class="content">
+  <p align="justify">The Easy Apply Bot has so many features and capabilities that we felt it no longer made sense to force someone who only wanted the most popular features pay the same amount as someone who wanted all the bells and whistles.</p align="justify">
+</div>
 	
+<button type="button" class="collapsible">How do I upgrade to the newest version?</button>
+<div class="content">
+  <p align="justify">We are currently working on implementing a version control system that will automatically update the Easy Apply Bot to the newest version. In the meantime, please reach out to our customer service team, and we'll get send you a link to the latest version free of charge.</p align="justify">
+</div>
+
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p align="justify">Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p align="justify">
