--- a/FAQ.html
+++ b/FAQ.html
@@ -157,7 +157,7 @@ The Easy Apply Bot has a simple 24 hour "no questions asked" return period.</p a
 We encourage that you turn off "email me whenever I apply to a position" notification from these websites when using the Easy Apply Bot, otherwise you may get an email for each and every job that you apply to...and these can add up very quickly. You will still recieve emails sent directly from employeers, though.</p align="justify">
 </div>
 
-<button type="button" class="collapsible">Why is there so many differnt versions of the Easy Apply Bot? Why don't you make one version that does everything?</button>
+<button type="button" class="collapsible">Why are there multiple versions of the Easy Apply Bot? </button>
 <div class="content">
   <p align="justify">The Easy Apply Bot has so many features and capabilities that we felt it no longer made sense to force someone who only wanted the most popular features pay the same amount as someone who wanted all the bells and whistles.</p align="justify">
 </div>
