--- a/FAQ.html
+++ b/FAQ.html
@@ -72,17 +72,19 @@
 
 
 <h1>Frequently Asked Questions</h1>
-<p align="justify"> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.</p align="justify">
+<p align="justify"> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out to us, please check the below list of our most frequently asked questions. This gives us more time to answer specific questions and it save you time waiting for our reply.</p align="justify">
 
 <button type="button" class="collapsible">How do I install the Easy Apply Bot?</button>
 <div class="content">
 	<H3>Installing the Easy Apply Bot is simple!</H3>
 <p align = "left">
-	1. Click the download button.
+	1. After purchase, you'll be able to the download the Easy Apply Bot.
 	<br><br>
-	2. Once the download is completed, open the Easy Apply Bot file. This may take a minute or two.
+	2. Once the download is completed, open the Easy Apply Bot file open the file and install - this should only to a minute or two.
 	<br><br>
 	3. Your good to go!
+	<br><br>
+	4. Your good to go to start applying to jobs!
 	<br><br>
 		<H3>It is highly recommended that you follow these guidelines for the best experience!</H3>
 <p align = "left">
@@ -103,13 +105,19 @@
 	
 	<button type="button" class="collapsible">Why use the Easy Apply Bot?</button>
 <div class="content">
-
-	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">     Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
-		According to Forbes, even so-called "casual" job searches could soak up to 7 or 8 hours per week<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
+We created the Easy Apply Bot so that everyone could have access to advanced automation systems and Artifial Intelegence while searching for- and applying to- jobs. While the prevaliance of website where companies can post their openings has exploded, this has created a new problem. Finding a job is now a two part problem: you need to stand out from the crowd and also apply to hundreds of positions at the same time.
+	<br><br>
+This is made more complex because even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
+	<br><br>
+According to Forbes, even so-called "casual" job searches could soak up to 7 or 8 hours per week<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
 <br><br>
-	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">     Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
+Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
 <br>
-	  <img src = "images/companiesLogos/US_News_logo.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">     U.S. News even goes as far to say: "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."'</p align="justify">
+U.S. News even goes as far to say: "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."'
+
+	
+	 
+</p align="justify">
 
 </div>
 	
