--- a/FAQ.html
+++ b/FAQ.html
@@ -129,7 +129,7 @@ U.S. News even goes as far to say: "While online application forms have made thi
 
 <button type="button" class="collapsible">What languages does the Easy Apply Bot Support?</button>
 <div class="content">
-  <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting must be set to "English" on the respective websites. Failing to do so may cause unexpected errors to occur. <br><br>If demand is high enough for another langauge, we may develope start supporting that langauge as well</p align="justify">
+  <p align="justify">Currently, the Easy Apply Bot only supports English, therefore your language setting must be set to "English" on the respective websites. Failing to do so may cause unexpected errors to occur. <br><br>If demand is high enough for another langauge, we may start supporting that langauge as well</p align="justify">
 </div>
 	
 <button type="button" class="collapsible">I think the Easy Apply Bot is frozen or broken, what should I do?</button>
