--- a/FAQ.html
+++ b/FAQ.html
@@ -60,7 +60,7 @@
 
 
 <div class="topnav">
-  <a href="/">Download Easy Apply Bot Now!</a>
+  <a href="/">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">	
@@ -82,9 +82,7 @@
 	<br><br>
 	2. Once the download is completed, open the Easy Apply Bot file open the file and install - this should only to a minute or two.
 	<br><br>
-	3. Your good to go!
-	<br><br>
-	4. Your good to go to start applying to jobs!
+	3. Open the Easy Apply Bot, and your good to go to start applying to jobs!
 	<br><br>
 		<H3>It is highly recommended that you follow these guidelines for the best experience!</H3>
 <p align = "left">
