--- a/FAQ.html
+++ b/FAQ.html
@@ -167,6 +167,16 @@ We encourage that you turn off "email me whenever I apply to a position" notific
   <p align="justify">We are currently working on implementing a version control system that will automatically update the Easy Apply Bot to the newest version. In the meantime, please reach out to our customer service team, and we'll get send you a link to the latest version free of charge.</p align="justify">
 </div>
 
+<button type="button" class="collapsible">How do I uninstall the Easy Apply Bot?</button>
+<div class="content">
+  <p align="justify">We designed the Easy Apply Bot with you in mind, so uninstalling is super simple. 
+	  1. Right-click the Easy Apply Bot folder.<br> <br>
+	  2. Click delete.<br> <br>
+	  3. That's it. You're done.
+	</p align="justify">
+</div>	
+
+	
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p align="justify">Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p align="justify">
