--- a/FAQ.html
+++ b/FAQ.html
@@ -104,7 +104,7 @@
 	<button type="button" class="collapsible">Why use the Easy Apply Bot?</button>
 <div class="content">
 <p align="justify">	
-We created the Easy Apply Bot so that everyone could have access to advanced automation systems and Artifial Intelegence while searching for- and applying to- jobs. While the prevaliance of website where companies can post their openings has exploded, this has created a new problem. Finding a job is now a two part problem: you need to stand out from the crowd and also apply to hundreds of positions at the same time.
+We created the Easy Apply Bot so that everyone could have access to advanced automation systems and Artifial Intelegence while searching for —and applying to— jobs. While the prevaliance of website where companies can post their openings has exploded, this has created a new problem. Finding a job is now a two part problem: you need to stand out from the crowd and also apply to hundreds of positions at the same time.
 	<br><br>
 This is made more complex because even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
 	<br><br>
