--- a/FAQ.html
+++ b/FAQ.html
@@ -104,9 +104,9 @@
 	<button type="button" class="collapsible">Why use the Easy Apply Bot?</button>
 <div class="content">
 <p align="justify">	
-We created the Easy Apply Bot so that everyone could have access to advanced automation systems and Artifial Intelegence while searching for —and applying to— jobs. While the prevaliance of website where companies can post their openings has exploded, this has created a new problem. Finding a job is now a two part problem: you need to stand out from the crowd and also apply to hundreds of positions at the same time.
+We created the Easy Apply Bot so that everyone could have access to advanced automation systems and Artifial Intelegence while searching for —and applying to— jobs. While the prevaliance of website where companies can post their openings has exploded, this has created a new and more complicated problems. 
 	<br><br>
-This is made more complex because even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
+Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! On top of this, in order to compete in a global marketplace you need to stand out from the crowd and also apply to hundreds of positions to ensure that you get a job!
 	<br><br>
 According to Forbes, even so-called "casual" job searches could soak up to 7 or 8 hours per week<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c">1</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!
 <br><br>
